文档增加目录

--- a/java/docs/数组操作.md
+++ b/java/docs/数组操作.md
@@ -1,3 +1,9 @@
+
+- [1. 数组操作](#1-%E6%95%B0%E7%BB%84%E6%93%8D%E4%BD%9C)
+  - [1.1 遍历数组](#11-%E9%81%8D%E5%8E%86%E6%95%B0%E7%BB%84)
+  - [1.2 数组排序](#12-%E6%95%B0%E7%BB%84%E6%8E%92%E5%BA%8F)
+  - [1.3 多维数组](#13-%E5%A4%9A%E7%BB%B4%E6%95%B0%E7%BB%84)
+
 # 1. 数组操作
 ## 1.1 遍历数组
 方法1：
