--- a/java/docs/基本数据类型.md
+++ b/java/docs/基本数据类型.md
@@ -1,3 +1,16 @@
+
+- [基本数据类型](#%E5%9F%BA%E6%9C%AC%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B)
+  - [1.整数类型](#1%E6%95%B4%E6%95%B0%E7%B1%BB%E5%9E%8B)
+  - [2.浮点数类型](#2%E6%B5%AE%E7%82%B9%E6%95%B0%E7%B1%BB%E5%9E%8B)
+  - [3.字符类型](#3%E5%AD%97%E7%AC%A6%E7%B1%BB%E5%9E%8B)
+  - [4.布尔类型](#4%E5%B8%83%E5%B0%94%E7%B1%BB%E5%9E%8B)
+  - [5.引用类型](#5%E5%BC%95%E7%94%A8%E7%B1%BB%E5%9E%8B)
+  - [6.数组类型](#6%E6%95%B0%E7%BB%84%E7%B1%BB%E5%9E%8B)
+  - [7.常量](#7%E5%B8%B8%E9%87%8F)
+  - [8.var关键字](#8var%E5%85%B3%E9%94%AE%E5%AD%97)
+
+
+
 # 基本数据类型
 
     bit
