--- a/java/docs/流程控制.md
+++ b/java/docs/流程控制.md
@@ -1,3 +1,13 @@
+
+- [1. 流程控制](#1-%E6%B5%81%E7%A8%8B%E6%8E%A7%E5%88%B6)
+  - [1.1 输入输出](#11-%E8%BE%93%E5%85%A5%E8%BE%93%E5%87%BA)
+  - [1.2 if判断](#12-if%E5%88%A4%E6%96%AD)
+  - [1.3 switch多重选择](#13-switch%E5%A4%9A%E9%87%8D%E9%80%89%E6%8B%A9)
+  - [1.4 while循环](#14-while%E5%BE%AA%E7%8E%AF)
+  - [1.5 do while 循环](#15-do-while-%E5%BE%AA%E7%8E%AF)
+  - [1.6 for循环](#16-for%E5%BE%AA%E7%8E%AF)
+  - [1.7 break和continue](#17-break%E5%92%8Ccontinue)
+
 # 1. 流程控制
 ## 1.1 输入输出
 **（1）输出**
