--- a/java/docs/异常处理.md
+++ b/java/docs/异常处理.md
@@ -1,3 +1,28 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+
+
+- [1. 异常处理](#1-%E5%BC%82%E5%B8%B8%E5%A4%84%E7%90%86)
+  - [1.1 Java的异常](#11-java%E7%9A%84%E5%BC%82%E5%B8%B8)
+  - [1.2 捕获异常](#12-%E6%8D%95%E8%8E%B7%E5%BC%82%E5%B8%B8)
+    - [1.2.1 说明](#121-%E8%AF%B4%E6%98%8E)
+    - [1.2.2 finally语句](#122-finally%E8%AF%AD%E5%8F%A5)
+    - [1.2.3 捕获多种异常](#123-%E6%8D%95%E8%8E%B7%E5%A4%9A%E7%A7%8D%E5%BC%82%E5%B8%B8)
+    - [1.2.4 总结](#124-%E6%80%BB%E7%BB%93)
+  - [1.3 抛出异常](#13-%E6%8A%9B%E5%87%BA%E5%BC%82%E5%B8%B8)
+    - [1.3.1 异常的传播](#131-%E5%BC%82%E5%B8%B8%E7%9A%84%E4%BC%A0%E6%92%AD)
+    - [1.3.2 抛出异常](#132-%E6%8A%9B%E5%87%BA%E5%BC%82%E5%B8%B8)
+    - [1.3.3 总结](#133-%E6%80%BB%E7%BB%93)
+  - [1.4 自定义异常](#14-%E8%87%AA%E5%AE%9A%E4%B9%89%E5%BC%82%E5%B8%B8)
+  - [1.5 NullPointerException](#15-nullpointerexception)
+  - [1.6 使用断言](#16-%E4%BD%BF%E7%94%A8%E6%96%AD%E8%A8%80)
+  - [1.7 使用JDK Logging](#17-%E4%BD%BF%E7%94%A8jdk-logging)
+  - [1.8 使用Commons Logging](#18-%E4%BD%BF%E7%94%A8commons-logging)
+  - [1.9 使用Log4j](#19-%E4%BD%BF%E7%94%A8log4j)
+  - [1.10 使用Log4j和logback](#110-%E4%BD%BF%E7%94%A8log4j%E5%92%8Clogback)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 # 1. 异常处理
 
 ## 1.1 Java的异常
