--- a/java/docs/异常处理.md
+++ b/java/docs/异常处理.md
@@ -68,7 +68,7 @@ try {
 - `RuntimeException`以及它的子类；
 - 非`RuntimeException`（包括`IOException`、`ReflectiveOperationException`等等）
 
-**Java规定：**
+### Java规定
 
 - 必须捕获的异常，包括`Exception`及其子类，但不包括`RuntimeException`及其子类，这种类型的异常称为`Checked Exception`。
 
@@ -76,7 +76,7 @@ try {
 
 **注意：编译器对RuntimeException及其子类不做强制捕获要求，不是指应用程序本身不应该捕获并处理RuntimeException。是否需要捕获，具体问题具体分析。**
 
-**总结**
+### 总结
 
 - Java使用异常来表示错误，并通过try ... catch捕获异常；
 
