--- a/java/docs/异常处理.md
+++ b/java/docs/异常处理.md
@@ -4,6 +4,8 @@
 
 - [1. 异常处理](#1-%E5%BC%82%E5%B8%B8%E5%A4%84%E7%90%86)
   - [1.1 Java的异常](#11-java%E7%9A%84%E5%BC%82%E5%B8%B8)
+    - [Java规定](#java%E8%A7%84%E5%AE%9A)
+    - [总结](#%E6%80%BB%E7%BB%93)
   - [1.2 捕获异常](#12-%E6%8D%95%E8%8E%B7%E5%BC%82%E5%B8%B8)
     - [1.2.1 说明](#121-%E8%AF%B4%E6%98%8E)
     - [1.2.2 finally语句](#122-finally%E8%AF%AD%E5%8F%A5)
@@ -14,7 +16,7 @@
     - [1.3.2 抛出异常](#132-%E6%8A%9B%E5%87%BA%E5%BC%82%E5%B8%B8)
     - [1.3.3 总结](#133-%E6%80%BB%E7%BB%93)
   - [1.4 自定义异常](#14-%E8%87%AA%E5%AE%9A%E4%B9%89%E5%BC%82%E5%B8%B8)
-    - [总结](#%E6%80%BB%E7%BB%93)
+    - [总结](#%E6%80%BB%E7%BB%93-1)
   - [1.5 NullPointerException](#15-nullpointerexception)
   - [1.6 使用断言](#16-%E4%BD%BF%E7%94%A8%E6%96%AD%E8%A8%80)
   - [1.7 使用JDK Logging](#17-%E4%BD%BF%E7%94%A8jdk-logging)
