--- a/java/docs/异常处理.md
+++ b/java/docs/异常处理.md
@@ -18,6 +18,7 @@
   - [1.4 自定义异常](#14-%E8%87%AA%E5%AE%9A%E4%B9%89%E5%BC%82%E5%B8%B8)
     - [总结](#%E6%80%BB%E7%BB%93-1)
   - [1.5 NullPointerException](#15-nullpointerexception)
+    - [总结](#%E6%80%BB%E7%BB%93-2)
   - [1.6 使用断言](#16-%E4%BD%BF%E7%94%A8%E6%96%AD%E8%A8%80)
   - [1.7 使用JDK Logging](#17-%E4%BD%BF%E7%94%A8jdk-logging)
   - [1.8 使用Commons Logging](#18-%E4%BD%BF%E7%94%A8commons-logging)
@@ -269,8 +270,66 @@ public class BaseException extends RuntimeException {
 - 自定义异常时，应该提供多种构造方法。
 
 ## 1.5 NullPointerException
+在所有的`RuntimeException`异常中，Java程序员最熟悉的恐怕就是`NullPointerException`了。
+
+`NullPointerException`即空指针异常，俗称`NPE`。如果一个对象为`null`，调用其方法或访问其字段就会产生`NullPointerException`，这个异常通常是由JVM抛出的，例如：
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        String s = null;
+        System.out.println(s.toLowerCase());
+    }
+}
+```
+
+### 总结
+- NullPointerException是Java代码常见的逻辑错误，应当早暴露，早修复；
+
+- 可以启用Java 14的增强异常信息来查看NullPointerException的详细错误信息。
+```java
+//给JVM添加一个-XX:+ShowCodeDetailsInExceptionMessages参数启用它
+java -XX:+ShowCodeDetailsInExceptionMessages Main.java
+```
+
 ## 1.6 使用断言
+
+- 断言是一种调试方式，断言失败会抛出AssertionError，只能在开发和测试阶段启用断言；
+
+- 对可恢复的错误不能使用断言，而应该抛出异常；
+
+- 断言很少被使用，更好的方法是编写单元测试。
+
 ## 1.7 使用JDK Logging
+
+- 日志是为了替代System.out.println()，可以定义格式，重定向到文件等；
+
+- 日志可以存档，便于追踪问题；
+
+- 日志记录可以按级别分类，便于打开或关闭某些级别；
+
+- 可以根据配置文件调整日志，无需修改代码；
+
+- Java标准库提供了`java.util.logging`来实现日志功能。
+
 ## 1.8 使用Commons Logging
+
+- Commons Logging是使用最广泛的日志模块；
+
+- Commons Logging的API非常简单；
+
+- Commons Logging可以自动检测并使用其他日志模块。
+
 ## 1.9 使用Log4j
+- 通过Commons Logging实现日志，不需要修改代码即可使用Log4j；
+
+- 使用Log4j只需要把log4j2.xml和相关jar放入classpath；
+
+- 如果要更换Log4j，只需要移除log4j2.xml和相关jar；
+
+- 只有扩展Log4j时，才需要引用Log4j的接口（例如，将日志加密写入数据库的功能，需要自己开发）。
+
 ## 1.10 使用Log4j和logback
+- SLF4J和Logback可以取代Commons Logging和Log4j；
+
+- 始终使用SLF4J的接口写入日志，使用Logback只需要配置，不需要修改代码。
