--- a/java/docs/异常处理.md
+++ b/java/docs/异常处理.md
@@ -329,7 +329,7 @@ java -XX:+ShowCodeDetailsInExceptionMessages Main.java
 
 - 只有扩展Log4j时，才需要引用Log4j的接口（例如，将日志加密写入数据库的功能，需要自己开发）。
 
-## 1.10 使用Log4j和logback
+## 1.10 使用SLF4J和Logback
 - SLF4J和Logback可以取代Commons Logging和Log4j；
 
 - 始终使用SLF4J的接口写入日志，使用Logback只需要配置，不需要修改代码。
