--- a/java/docs/异常处理.md
+++ b/java/docs/异常处理.md
@@ -23,7 +23,7 @@
   - [1.7 使用JDK Logging](#17-%E4%BD%BF%E7%94%A8jdk-logging)
   - [1.8 使用Commons Logging](#18-%E4%BD%BF%E7%94%A8commons-logging)
   - [1.9 使用Log4j](#19-%E4%BD%BF%E7%94%A8log4j)
-  - [1.10 使用Log4j和logback](#110-%E4%BD%BF%E7%94%A8log4j%E5%92%8Clogback)
+  - [1.10 使用SLF4J和Logback](#110-%E4%BD%BF%E7%94%A8slf4j%E5%92%8Clogback)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
