--- a/java/docs/异常处理.md
+++ b/java/docs/异常处理.md
@@ -46,6 +46,8 @@ try {
     // io error:
 } catch (Exception e) {
     // other error:
+} finally { //可以不写
+    // System.out.println("END");
 }
 ```
 异常继承树：
