--- a/java/docs/反射.md
+++ b/java/docs/反射.md
@@ -1,3 +1,19 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+
+[comment]: <> (**Table of Contents**  *generated with [DocToc]&#40;https://github.com/thlorenz/doctoc&#41;*)
+
+- [1. 反射](#1-%E5%8F%8D%E5%B0%84)
+  - [1.1 定义](#11-%E5%AE%9A%E4%B9%89)
+  - [1.2 Class类](#12-class%E7%B1%BB)
+  - [1.3 访问字段](#13-%E8%AE%BF%E9%97%AE%E5%AD%97%E6%AE%B5)
+  - [1.4 调用方法](#14-%E8%B0%83%E7%94%A8%E6%96%B9%E6%B3%95)
+  - [1.5 调用构造方法](#15-%E8%B0%83%E7%94%A8%E6%9E%84%E9%80%A0%E6%96%B9%E6%B3%95)
+  - [1.6 获取继承关系](#16-%E8%8E%B7%E5%8F%96%E7%BB%A7%E6%89%BF%E5%85%B3%E7%B3%BB)
+  - [1.7 动态代理](#17-%E5%8A%A8%E6%80%81%E4%BB%A3%E7%90%86)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 # 1. 反射
 ## 1.1 定义
 反射就是`Reflection`，`Java`的反射是指程序在运行期可以拿到一个对象的所有信息。
