--- a/java/docs/注解.md
+++ b/java/docs/注解.md
@@ -1,4 +1,21 @@
-# 1. 反射
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+
+
+- [1. 注解](#1-%E6%B3%A8%E8%A7%A3)
+  - [1.1 使用注解](#11-%E4%BD%BF%E7%94%A8%E6%B3%A8%E8%A7%A3)
+  - [1.2 定义注解](#12-%E5%AE%9A%E4%B9%89%E6%B3%A8%E8%A7%A3)
+    - [1.2.1 元注解](#121-%E5%85%83%E6%B3%A8%E8%A7%A3)
+      - [1.2.1.1 @Target](#1211-target)
+      - [1.2.1.2 @Retention](#1212-retention)
+      - [1.2.1.3 @Repeatable](#1213-repeatable)
+      - [1.2.1.4 @Inherited](#1214-inherited)
+      - [1.2.1.5 总结](#1215-%E6%80%BB%E7%BB%93)
+  - [1.3 处理注解](#13-%E5%A4%84%E7%90%86%E6%B3%A8%E8%A7%A3)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
+# 1. 注解
 ## 1.1 使用注解
 注解（`Annotation`）是放在`Java`源码的类、方法、字段、参数前的一种特殊“注释”：
 ```java
