--- a/java/docs/泛型.md
+++ b/java/docs/泛型.md
@@ -1,2 +1,237 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+
+
+- [1. 泛型](#1-%E6%B3%9B%E5%9E%8B)
+  - [1.1 什么是泛型](#11-%E4%BB%80%E4%B9%88%E6%98%AF%E6%B3%9B%E5%9E%8B)
+  - [1.2 使用泛型](#12-%E4%BD%BF%E7%94%A8%E6%B3%9B%E5%9E%8B)
+  - [1.3 编写泛型](#13-%E7%BC%96%E5%86%99%E6%B3%9B%E5%9E%8B)
+    - [1.3.1 步骤](#131-%E6%AD%A5%E9%AA%A4)
+    - [1.3.2 静态方法](#132-%E9%9D%99%E6%80%81%E6%96%B9%E6%B3%95)
+    - [1.3.3 多个泛型类型](#133-%E5%A4%9A%E4%B8%AA%E6%B3%9B%E5%9E%8B%E7%B1%BB%E5%9E%8B)
+    - [1.3.4 总结](#134-%E6%80%BB%E7%BB%93)
+  - [1.4 擦拭法](#14-%E6%93%A6%E6%8B%AD%E6%B3%95)
+  - [1.5 extends通配符](#15-extends%E9%80%9A%E9%85%8D%E7%AC%A6)
+  - [1.6 super通配符](#16-super%E9%80%9A%E9%85%8D%E7%AC%A6)
+  - [1.7 泛型和反射](#17-%E6%B3%9B%E5%9E%8B%E5%92%8C%E5%8F%8D%E5%B0%84)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 # 1. 泛型
 ## 1.1 什么是泛型
+泛型就是定义一种模板，例如`ArrayList<T>`：
+```java
+public class ArrayList<T> {
+    private T[] array;
+    private int size;
+    public void add(T e) {...}
+    public void remove(int index) {...}
+    public T get(int index) {...}
+}
+```
+
+然后在代码中为用到的类创建对应的ArrayList<类型>：
+
+```java
+// 创建可以存储String的ArrayList:
+ArrayList<String> strList = new ArrayList<String>();
+// 创建可以存储Float的ArrayList:
+ArrayList<Float> floatList = new ArrayList<Float>();
+// 创建可以存储Person的ArrayList:
+ArrayList<Person> personList = new ArrayList<Person>();
+```
+
+由编译器针对类型作检查：
+
+```java
+strList.add("hello"); // OK
+String s = strList.get(0); // OK
+strList.add(new Integer(123)); // compile error!
+Integer n = strList.get(0); // compile error!
+```
+
+这样一来，既实现了编写一次，万能匹配，又通过编译器保证了类型安全：这就是`泛型`。
+
+**总结**
+
+- 泛型就是编写模板代码来适应任意类型；
+- 泛型的好处是使用时不必对类型进行强制转换，它通过编译器对类型进行检查；
+- 注意泛型的继承关系：可以把ArrayList<Integer>向上转型为List<Integer>（T不能变！），但不能把ArrayList<Integer>向上转型为ArrayList<Number>（T不能变成父类）。
+
+## 1.2 使用泛型
+
+**总结**
+
+- 使用泛型时，把泛型参数<T>替换为需要的class类型，例如：ArrayList<String>，ArrayList<Number>等；
+
+- 可以省略编译器能自动推断出的类型，例如：List<String> list = new ArrayList<>();；
+
+- 不指定泛型参数类型时，编译器会给出警告，且只能将<T>视为Object类型；
+
+- 可以在接口中定义泛型类型，实现此接口的类必须实现正确的泛型类型。
+- 
+## 1.3 编写泛型
+
+### 1.3.1 步骤
+编写一个泛型类的步骤如下：
+1. 按照某种类型，例如：`String`，来编写类
+```java
+public class Pair {
+    private String first;
+    private String last;
+    public Pair(String first, String last) {
+        this.first = first;
+        this.last = last;
+    }
+    public String getFirst() {
+        return first;
+    }
+    public String getLast() {
+        return last;
+    }
+}
+```
+2. 然后，标记所有的特定类型，这里是`String`：
+```java
+public class Pair {
+    private _String_ first;
+    private _String_ last;
+    public Pair(_String_ first, _String_ last) {
+        this.first = first;
+        this.last = last;
+    }
+    public _String_ getFirst() {
+        return first;
+    }
+    public _String_ getLast() {
+        return last;
+    }
+}
+```
+3. 最后，把特定类型`String`替换为`T`，并申明`<T>`：
+```java
+public class Pair<T> {
+    private T first;
+    private T last;
+    public Pair(T first, T last) {
+        this.first = first;
+        this.last = last;
+    }
+    public T getFirst() {
+        return first;
+    }
+    public T getLast() {
+        return last;
+    }
+}
+```
+熟练后即可直接从`T`开始编写。
+
+### 1.3.2 静态方法
+编写泛型类时，要特别注意，泛型类型<T>不能用于静态方法。
+
+在网上搜索发现，可以在static修饰符后面加一个<T>，编译就能通过：
+```java
+public class Pair<T> {
+    private T first;
+    private T last;
+    public Pair(T first, T last) {
+        this.first = first;
+        this.last = last;
+    }
+    public T getFirst() { ... }
+    public T getLast() { ... }
+
+    // 可以编译通过:
+    public static <T> Pair<T> create(T first, T last) {
+        return new Pair<T>(first, last);
+    }
+}
+```
+但实际上，这个<T>和Pair<T>类型的<T>已经没有任何关系了。
+
+对于静态方法，我们可以单独改写为“泛型”方法，只需要使用另一个类型即可。对于上面的create()静态方法，我们应该把它改为另一种泛型类型，例如，<K>：
+```java
+public class Pair<T> {
+    private T first;
+    private T last;
+    public Pair(T first, T last) {
+        this.first = first;
+        this.last = last;
+    }
+    public T getFirst() { ... }
+    public T getLast() { ... }
+
+    // 静态泛型方法应该使用其他类型区分:
+    public static <K> Pair<K> create(K first, K last) {
+        return new Pair<K>(first, last);
+    }
+}
+```
+
+这样才能清楚地将静态方法的泛型类型和实例类型的泛型类型区分开。
+
+### 1.3.3 多个泛型类型
+泛型还可以定义多种类型。例如，我们希望Pair不总是存储两个类型一样的对象，就可以使用类型<T, K>：
+```java
+public class Pair<T, K> {
+    private T first;
+    private K last;
+    public Pair(T first, K last) {
+        this.first = first;
+        this.last = last;
+    }
+    public T getFirst() { ... }
+    public K getLast() { ... }
+}
+```
+
+使用的时候，需要指出两种类型：
+```java
+Pair<String, Integer> p = new Pair<>("test", 123);
+```
+
+Java标准库的Map<K, V>就是使用两种泛型类型的例子。它对Key使用一种类型，对Value使用另一种类型。
+
+### 1.3.4 总结
+
+- 编写泛型时，需要定义泛型类型<T>；
+
+- 静态方法不能引用泛型类型<T>，必须定义其他类型（例如<K>）来实现静态泛型方法；
+
+- 泛型可以同时定义多种类型，例如Map<K, V>。
+
+## 1.4 擦拭法
+
+**总结**
+Java的泛型是采用擦拭法实现的；
+
+擦拭法决定了泛型<T>：
+
+- 不能是基本类型，例如：int；
+- 不能获取带泛型类型的Class，例如：Pair<String>.class；
+- 不能判断带泛型类型的类型，例如：x instanceof Pair<String>；
+- 不能实例化T类型，例如：new T()。
+- 泛型方法要防止重复定义方法，例如：public boolean equals(T obj)；
+
+子类可以获取父类的泛型类型<T>。
+
+## 1.5 extends通配符
+
+**总结**
+
+使用类似`<? extends Number>`通配符作为方法参数时表示：
+
+- 方法内部可以调用获取`Number`引用的方法，例如：`Number n = obj.getFirst();`；
+
+- 方法内部无法调用传入`Number`引用的方法（`null`除外），例如：`obj.setFirst(Number n);`。
+
+即一句话总结：使用`extends`通配符表示可以读，不能写。
+
+使用类似`<T extends Number>`定义泛型类时表示：
+
+- 泛型类型限定为`Number`以及`Number`的子类。
+
+## 1.6 super通配符
+
+## 1.7 泛型和反射
