--- a/java/docs/泛型.md
+++ b/java/docs/泛型.md
@@ -233,5 +233,28 @@ Java的泛型是采用擦拭法实现的；
 - 泛型类型限定为`Number`以及`Number`的子类。
 
 ## 1.6 super通配符
+**总结**
+
+1. 使用类似`<? super Integer>`通配符作为方法参数时表示：
+
+- 方法内部可以调用传入`Integer`引用的方法，例如：`obj.setFirst(Integer n);`；
+
+- 方法内部无法调用获取`Integer`引用的方法（`Object`除外），例如：`Integer n = obj.getFirst();`。
+
+2. 即使用`super`通配符表示只能写不能读。
+
+3. 使用`extends`和`super`通配符要遵循`PECS`原则。
+
+4. 无限定通配符`<?>`很少使用，可以用`<T>`替换，同时它是所有`<T>`类型的超类。
 
 ## 1.7 泛型和反射
+
+**总结**
+
+1. 部分反射`API`是泛型，例如：`Class<T>`，`Constructor<T>`；
+
+2. 可以声明带泛型的数组，但不能直接创建带泛型的数组，必须强制转型；
+
+3. 可以通过`Array.newInstance(Class<T>, int)`创建`T[]`数组，需要强制转型；
+
+4. 同时使用泛型和可变参数时需要特别小心。
