--- a/java/docs/集合.md
+++ b/java/docs/集合.md
@@ -8,4 +8,19 @@
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
 # 1. 集合
-## 1.1 
+## 1.1 Java集合简介
+
+## 1.2 使用List
+## 1.3 编写equals方法
+## 1.4 使用Map
+## 1.5 编写equals和hashCode
+## 1.6 使用EnumMap
+## 1.7 使用TreeMap
+## 1.8 使用Priorities
+## 1.9 使用Set
+## 1.10 使用Queue
+## 1.11 使用PriorityQueue
+## 1.12 使用Deque
+## 1.13 使用Stack
+## 1.14 使用Iterator
+## 1.15 使用Collections
